- 解决创建列表时的input 多次focus问题 - 新增任务完成时的播放背景music功能

--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -194,10 +194,21 @@ page {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            .title {
-              width: 100%;
-              padding-left: 10px;
-              font-size: 16px;
+
+            .left{
+              display: flex;
+              flex-direction: row;
+              align-content: center;
+              align-items: center;
+              width: 93%;
+              .title {
+                width: 100%;
+                overflow: hidden;
+                text-overflow:ellipsis;
+                white-space: nowrap;
+                padding-left: 10px;
+                font-size: 16px;
+              }
             }
           }
         }
