--- a/pages/list/list.scss
+++ b/pages/list/list.scss
@@ -31,11 +31,14 @@ page {
       }
 
       .name{
-        position: absolute;
         width: 100%;
+        max-width: 200px;
         text-align: center;
         font-weight: bold;
         font-size: 16px;
+        overflow: hidden;
+        text-overflow:ellipsis;
+        white-space: nowrap;
       }
 
       .right{
@@ -104,12 +107,15 @@ page {
             color: gray;
             font-weight: 400;
             display: flex;
-            justify-items: center;
+            justify-items: start;
 
             .listname{
+              display: flex;
+              flex-direction: row;
+              justify-content: start;
+              align-content: start;
               text{
-                transform:scale(0.8);
-                margin-left: -6px;
+                font-size: 12px;
                 -webkit-box-orient: vertical;
                 -webkit-line-clamp: 1;
               }
@@ -442,6 +448,19 @@ page {
           border-top: 2px solid #f3f3f3;
         }
       }
+    }
+  }
+
+  i-modal{
+    textarea {
+      line-height: 20px;
+      height: 20px;
+      width: 80%;
+      margin: 0 auto;
+      text-align: left;
+      padding: 3px 10px;
+      background-color: #eaf6ff;
+      border-radius: 4px;
     }
   }
 }
